welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:4: error: ')' expected but 'else' found.
  } else if (you <= 2 || date <= 2){
    ^